// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Tabs Base 1`] = `
<Tabs
  onSelect={[Function]}
  selected={0}
  tabs={
    Array [
      <strong>
        Description
      </strong>,
      "Documents",
    ]
  }
>
  <WithStyles(TabsComp)
    innerRef={null}
    jssContext={
      Object {
        "classNamePrefix": "",
        "disableStylesGeneration": false,
      }
    }
    onSelect={[Function]}
    selected={0}
    tabs={
      Array [
        <strong>
          Description
        </strong>,
        "Documents",
      ]
    }
    theme={Object {}}
  >
    <TabsComp
      classes={
        Object {
          "active": "TabsComp-active-0-3-327",
          "container": "TabsComp-container-0-3-330",
          "header": "TabsComp-header-0-3-326",
          "inactive": "TabsComp-inactive-0-3-328",
          "root": "TabsComp-root-0-3-325",
          "tab": "TabsComp-tab-0-3-329",
        }
      }
      onSelect={[Function]}
      selected={0}
      tabs={
        Array [
          <strong>
            Description
          </strong>,
          "Documents",
        ]
      }
    >
      <div
        className="TabsComp-root-0-3-325"
      >
        <div
          className="TabsComp-header-0-3-326"
        >
          <div
            className="TabsComp-tab-0-3-329 TabsComp-active-0-3-327"
            key="0"
            onClick={[Function]}
          >
            <Typography
              bold={true}
              color="inherit"
              textTransform="capitalize"
              variant="standard"
            >
              <WithStyles(TypographyComp)
                bold={true}
                color="inherit"
                innerRef={null}
                jssContext={
                  Object {
                    "classNamePrefix": "",
                    "disableStylesGeneration": false,
                  }
                }
                textTransform="capitalize"
                theme={Object {}}
                variant="standard"
              >
                <TypographyComp
                  bold={true}
                  classes={
                    Object {
                      "big": "TypographyComp-big-0-3-7",
                      "bold": "TypographyComp-bold-0-3-1",
                      "capitalize": "TypographyComp-capitalize-0-3-12",
                      "distance": "TypographyComp-distance-0-3-6",
                      "ellipsis": "TypographyComp-ellipsis-0-3-14",
                      "giant": "TypographyComp-giant-0-3-9",
                      "heading": "TypographyComp-heading-0-3-8",
                      "italic": "TypographyComp-italic-0-3-3",
                      "lowercase": "TypographyComp-lowercase-0-3-11",
                      "noWrap": "TypographyComp-noWrap-0-3-13",
                      "semiBold": "TypographyComp-semiBold-0-3-2",
                      "standard": "TypographyComp-standard-0-3-5",
                      "subtext": "TypographyComp-subtext-0-3-4",
                      "uppercase": "TypographyComp-uppercase-0-3-10",
                    }
                  }
                  color="inherit"
                  textTransform="capitalize"
                  variant="standard"
                >
                  <span
                    className="TypographyComp-standard-0-3-5 TypographyComp-capitalize-0-3-12 TypographyComp-bold-0-3-1"
                    style={
                      Object {
                        "color": "inherit",
                      }
                    }
                  >
                    <strong
                      key="xxx"
                    >
                      Description
                    </strong>
                  </span>
                </TypographyComp>
              </WithStyles(TypographyComp)>
            </Typography>
          </div>
          <div
            className="TabsComp-tab-0-3-329 TabsComp-inactive-0-3-328"
            key="1"
            onClick={[Function]}
          >
            <Typography
              bold={true}
              color="inherit"
              textTransform="capitalize"
              variant="standard"
            >
              <WithStyles(TypographyComp)
                bold={true}
                color="inherit"
                innerRef={null}
                jssContext={
                  Object {
                    "classNamePrefix": "",
                    "disableStylesGeneration": false,
                  }
                }
                textTransform="capitalize"
                theme={Object {}}
                variant="standard"
              >
                <TypographyComp
                  bold={true}
                  classes={
                    Object {
                      "big": "TypographyComp-big-0-3-7",
                      "bold": "TypographyComp-bold-0-3-1",
                      "capitalize": "TypographyComp-capitalize-0-3-12",
                      "distance": "TypographyComp-distance-0-3-6",
                      "ellipsis": "TypographyComp-ellipsis-0-3-14",
                      "giant": "TypographyComp-giant-0-3-9",
                      "heading": "TypographyComp-heading-0-3-8",
                      "italic": "TypographyComp-italic-0-3-3",
                      "lowercase": "TypographyComp-lowercase-0-3-11",
                      "noWrap": "TypographyComp-noWrap-0-3-13",
                      "semiBold": "TypographyComp-semiBold-0-3-2",
                      "standard": "TypographyComp-standard-0-3-5",
                      "subtext": "TypographyComp-subtext-0-3-4",
                      "uppercase": "TypographyComp-uppercase-0-3-10",
                    }
                  }
                  color="inherit"
                  textTransform="capitalize"
                  variant="standard"
                >
                  <span
                    className="TypographyComp-standard-0-3-5 TypographyComp-capitalize-0-3-12 TypographyComp-bold-0-3-1"
                    style={
                      Object {
                        "color": "inherit",
                      }
                    }
                  >
                    Documents
                  </span>
                </TypographyComp>
              </WithStyles(TypographyComp)>
            </Typography>
          </div>
        </div>
        <div
          className="TabsComp-container-0-3-330"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam aliquet ornare est. Fusce eget urna imperdiet, fringilla leo vel, euismod augue.
        </div>
      </div>
    </TabsComp>
  </WithStyles(TabsComp)>
</Tabs>
`;

exports[`Storyshots Components/Tabs Statefull 1`] = `
<Statefull>
  <Tabs
    onSelect={[Function]}
    selected={0}
    tabs={
      Array [
        "Description",
        "Documents",
      ]
    }
  >
    <WithStyles(TabsComp)
      innerRef={null}
      jssContext={
        Object {
          "classNamePrefix": "",
          "disableStylesGeneration": false,
        }
      }
      onSelect={[Function]}
      selected={0}
      tabs={
        Array [
          "Description",
          "Documents",
        ]
      }
      theme={Object {}}
    >
      <TabsComp
        classes={
          Object {
            "active": "TabsComp-active-0-3-327",
            "container": "TabsComp-container-0-3-330",
            "header": "TabsComp-header-0-3-326",
            "inactive": "TabsComp-inactive-0-3-328",
            "root": "TabsComp-root-0-3-325",
            "tab": "TabsComp-tab-0-3-329",
          }
        }
        onSelect={[Function]}
        selected={0}
        tabs={
          Array [
            "Description",
            "Documents",
          ]
        }
      >
        <div
          className="TabsComp-root-0-3-325"
        >
          <div
            className="TabsComp-header-0-3-326"
          >
            <div
              className="TabsComp-tab-0-3-329 TabsComp-active-0-3-327"
              key="0"
              onClick={[Function]}
            >
              <Typography
                bold={true}
                color="inherit"
                textTransform="capitalize"
                variant="standard"
              >
                <WithStyles(TypographyComp)
                  bold={true}
                  color="inherit"
                  innerRef={null}
                  jssContext={
                    Object {
                      "classNamePrefix": "",
                      "disableStylesGeneration": false,
                    }
                  }
                  textTransform="capitalize"
                  theme={Object {}}
                  variant="standard"
                >
                  <TypographyComp
                    bold={true}
                    classes={
                      Object {
                        "big": "TypographyComp-big-0-3-7",
                        "bold": "TypographyComp-bold-0-3-1",
                        "capitalize": "TypographyComp-capitalize-0-3-12",
                        "distance": "TypographyComp-distance-0-3-6",
                        "ellipsis": "TypographyComp-ellipsis-0-3-14",
                        "giant": "TypographyComp-giant-0-3-9",
                        "heading": "TypographyComp-heading-0-3-8",
                        "italic": "TypographyComp-italic-0-3-3",
                        "lowercase": "TypographyComp-lowercase-0-3-11",
                        "noWrap": "TypographyComp-noWrap-0-3-13",
                        "semiBold": "TypographyComp-semiBold-0-3-2",
                        "standard": "TypographyComp-standard-0-3-5",
                        "subtext": "TypographyComp-subtext-0-3-4",
                        "uppercase": "TypographyComp-uppercase-0-3-10",
                      }
                    }
                    color="inherit"
                    textTransform="capitalize"
                    variant="standard"
                  >
                    <span
                      className="TypographyComp-standard-0-3-5 TypographyComp-capitalize-0-3-12 TypographyComp-bold-0-3-1"
                      style={
                        Object {
                          "color": "inherit",
                        }
                      }
                    >
                      Description
                    </span>
                  </TypographyComp>
                </WithStyles(TypographyComp)>
              </Typography>
            </div>
            <div
              className="TabsComp-tab-0-3-329 TabsComp-inactive-0-3-328"
              key="1"
              onClick={[Function]}
            >
              <Typography
                bold={true}
                color="inherit"
                textTransform="capitalize"
                variant="standard"
              >
                <WithStyles(TypographyComp)
                  bold={true}
                  color="inherit"
                  innerRef={null}
                  jssContext={
                    Object {
                      "classNamePrefix": "",
                      "disableStylesGeneration": false,
                    }
                  }
                  textTransform="capitalize"
                  theme={Object {}}
                  variant="standard"
                >
                  <TypographyComp
                    bold={true}
                    classes={
                      Object {
                        "big": "TypographyComp-big-0-3-7",
                        "bold": "TypographyComp-bold-0-3-1",
                        "capitalize": "TypographyComp-capitalize-0-3-12",
                        "distance": "TypographyComp-distance-0-3-6",
                        "ellipsis": "TypographyComp-ellipsis-0-3-14",
                        "giant": "TypographyComp-giant-0-3-9",
                        "heading": "TypographyComp-heading-0-3-8",
                        "italic": "TypographyComp-italic-0-3-3",
                        "lowercase": "TypographyComp-lowercase-0-3-11",
                        "noWrap": "TypographyComp-noWrap-0-3-13",
                        "semiBold": "TypographyComp-semiBold-0-3-2",
                        "standard": "TypographyComp-standard-0-3-5",
                        "subtext": "TypographyComp-subtext-0-3-4",
                        "uppercase": "TypographyComp-uppercase-0-3-10",
                      }
                    }
                    color="inherit"
                    textTransform="capitalize"
                    variant="standard"
                  >
                    <span
                      className="TypographyComp-standard-0-3-5 TypographyComp-capitalize-0-3-12 TypographyComp-bold-0-3-1"
                      style={
                        Object {
                          "color": "inherit",
                        }
                      }
                    >
                      Documents
                    </span>
                  </TypographyComp>
                </WithStyles(TypographyComp)>
              </Typography>
            </div>
          </div>
          <div
            className="TabsComp-container-0-3-330"
          >
            <div
              style={
                Object {
                  "height": 250,
                }
              }
            >
              Some content for Description
            </div>
          </div>
        </div>
      </TabsComp>
    </WithStyles(TabsComp)>
  </Tabs>
</Statefull>
`;
